--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,11 @@
     "ember-cli-shims": "0.1.0",
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
-    "jquery": "1.11.3"
+    "jquery": "1.11.3",
+    "semantic-ui-daterangepicker": "5d46ed2e6e5a0bf398bb6a5df82e06036dfc46be",
+    "blueimp-file-upload": "9.11.2",
+    "jquery-file-download": "1.4.4",
+    "semantic-ui": "^2.1.8"
   },
   "resolutions": {
     "ember": "2.3.0"
