--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "semantic-ui": "^2.1.8",
     "pretender": "~0.10.1",
     "lodash": "~3.7.0",
-    "Faker": "~3.0.0"
+    "Faker": "~3.0.0",
+    "devicejs": "0.2.7"
   },
   "resolutions": {
     "ember": "2.3.0"
