--- a/.jshintrc
+++ b/.jshintrc
@@ -1,10 +1,12 @@
 {
   "predef": [
-    "server",
     "document",
     "window",
     "-Promise"
   ],
+  "globals": {
+    "moment": true
+  },
   "browser": true,
   "boss": true,
   "curly": true,
@@ -29,5 +31,5 @@
   "white": false,
   "eqnull": true,
   "esnext": true,
-  "unused": true
+  "unused": "vars"
 }
