--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "ember-data": "^2.5.2",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
-    "ember-flexberry": "git+https://github.com/Flexberry/ember-flexberry.git#14ff89113001f04b46f5bee46bebeb5f5b03f26b",
-    "ember-flexberry-projections": "Flexberry/ember-flexberry-projections#develop",
+    "ember-flexberry": "git+https://github.com/Flexberry/ember-flexberry.git#8f15826fde7736eb769c1a27a680eebb64d24773",
+    "ember-flexberry-data": "Flexberry/ember-flexberry-data#develop",
     "ember-flexberry-geolocation": "https://github.com/Flexberry/ember-flexberry-geolocation",
     "ember-load-initializers": "^0.5.0",
     "ember-moment": "6.0.0",
