--- a/bower.json
+++ b/bower.json
@@ -15,11 +15,11 @@
     "Leaflet-WFST": "develop",
     "leaflet.wms": "gh-pages",
     "leaflet.editable": "master",
-    "leaflet-history": "https://github.com/Flexberry/leaflet-history.git#master",
-    "leaflet.editable.measures": "https://github.com/Flexberry/Leaflet.Editable.Measures.git#gh-pages",
+    "leaflet-history": "https://github.com/Flexberry/leaflet-history.git#d67e852ae405a0ca2f6cd069d2f0ff048d7a5ce8",
+    "leaflet-editable-measures": "0.1.0",
     "html2canvas": "master",
-    "leaflet.export": "https://github.com/Flexberry/Leaflet.Export.git#master",
-    "leaflet-switch-scale-control": "https://github.com/Flexberry/leaflet-switch-scale-control.git#master",
+    "leaflet-export": "0.1.0",
+    "leaflet-switch-scale-control": "0.1.0",
     "Leaflet.zoomslider": "https://github.com/Flexberry/Leaflet.zoomslider.git#leaflet-1.0.1",
     "leaflet-minimap": "3.4.0",
     "osmtogeojson": "2.2.12",
