--- a/package.json
+++ b/package.json
@@ -32,16 +32,18 @@
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
+    "ember-cli-less": "1.5.4",
     "ember-cli-moment-shim": "3.3.1",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
-    "ember-cli-less": "1.5.4",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "~2.4.3",
+    "ember-data": "2.13.1",
     "ember-export-application-global": "^1.0.5",
-    "ember-flexberry": "git+https://github.com/Flexberry/ember-flexberry.git#cec3bda1afa672097fea4086fba4daa62b4e2c39",
-    "ember-flexberry-gis": "git://github.com/flexberry/ember-flexberry-gis.git#release-0.1.0",
+    "ember-flexberry": "0.9.0-beta.15",
+    "ember-flexberry-gis": "0.1.1",
+    "ember-flexberry-gis-csw": "0.1.0",
+    "ember-inflector": "2.0.1",
     "ember-link-action": "0.0.34",
     "ember-load-initializers": "^0.5.1",
     "ember-moment": "6.0.0",
@@ -50,7 +52,7 @@
     "inflection": "1.10.0",
     "loader.js": "^4.0.1",
     "node-uuid": "1.4.7",
-    "semantic-ui-ember": "0.9.3",
+    "semantic-ui-ember": "git://github.com/Flexberry/Semantic-UI-Ember.git#0d27d98ae0a66c9a078ff1fd77f260ea57b9d3b8",
     "ui-ember-slider": "0.5.0"
   }
 }
