--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - bower install
 
 script:
-  - ember $EMBER_TRY_SCENARIO test
+  - ember try:one $EMBER_TRY_SCENARIO test
 
 after_success:
   - test $EMBER_TRY_SCENARIO == "default" && test $TRAVIS_PULL_REQUEST == "false" && (test $TRAVIS_BRANCH == "master" || test $TRAVIS_BRANCH == "develop") && ember build --gh-pages --brunch=$TRAVIS_BRANCH && bash scripts/deploy-to-gh-pages.sh
